--- a/html/forms/example-form.html
+++ b/html/forms/example-form.html
@@ -1,4 +1,4 @@
-<form name="adventure" action="" method="post">
+<form name="adventure" action="https://httpbin.org/post" method="post">
   <fieldset>
     <div>
       <label>Full name:</label>
@@ -11,7 +11,7 @@
     </div>
 
     <div>
-      <label>Password:</label>
+      <label>Secret Password:</label>
       <input type="password" name="password">
     </div>
   </fieldset>
