--- a/html/forms/practice-form.html
+++ b/html/forms/practice-form.html
@@ -14,8 +14,8 @@
   </fieldset>
  <fieldset>
     <legend> Coffee Size </legend>
-    <!-- The second value will be selected initially -->
-<select name="Coffee Size"> <!--Supplement an id here instead of using 'name'-->
+  
+<select name="Coffee Size">
   <option value="value1">Small</option> 
   <option value="value2" selected>Medium</option>
   <option value="value3">Large</option>
@@ -25,15 +25,13 @@
 <fieldset>
 <div>	
 	<legend> Milk </legend>
-    <p><label> <input type=radio name=milk value="Non-Fat">Non-Fat  </label></p>
+    <p><label> <input type=radio name=milk value="Non-Fat">Non-Fat</label></p>
     <p><label> <input type=radio name=milk value="Milk"> Milk </label></p>
     <p><label> <input type=radio name=milk value="Whole Milk"> Whole Milk </label></p>
-   </fieldset>
-  <fieldset>
     <div>
-      <label>Coffee order:</label>
+      <label>Special Instructions:</label>
       <textarea name="Coffee order"
-   rows="5" cols="50">What's order</textarea>
+   rows="5" cols="50">What's your order</textarea>
     </div>
 
     <div>
