aded rowspan colspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -6,6 +6,10 @@
 <body>
 <table border="1">
 	<tr>
+	<td colspan="2">Lawful and Chaos</td>
+		<td>blank column</td>
+			<td rowspan="2">notsure</td>
+	</tr>	
 		<td>Lawful Good</td>
 		<td>Lawful Neutral</td>
 		<td>Lawful Evil</td>
