close to figuring out'

--- a/css/positioning/3_3.html
+++ b/css/positioning/3_3.html
@@ -2,14 +2,26 @@
 <html>
 <head>
 	<title>Octopus in Clothes</title>
+<style>
+div {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+}
+
+</style>
 </head>
 <body>
-	<div>
-		<img src="glasses.png">
+	<div class="absolute">
 		<img src="octopus.png">
+	</div>
+	<div>
 		<img src="hat.png">
 	</div>
-
+	<div>
+		<img src="glasses.png">
+	</div>
 
 </body>
 </html>
