adding stylesheet to html

--- a/css/positioning/3_3.html
+++ b/css/positioning/3_3.html
@@ -2,26 +2,13 @@
 <html>
 <head>
 	<title>Octopus in Clothes</title>
-<style>
-div {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: -1;
-}
-
-</style>
+	<link rel="stylesheet" type="text/css" href="octopus.css">
 </head>
 <body>
-	<div class="absolute">
+	<div>
 		<img src="octopus.png">
-	</div>
-	<div>
 		<img src="hat.png">
-	</div>
-	<div>
 		<img src="glasses.png">
 	</div>
-
 </body>
 </html>
