fix div tags on html

--- a/css/positioning/3_3.html
+++ b/css/positioning/3_3.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="octopus.css">
 </head>
 <body>
-	<div>
-		<img src="octopus.png">
-		<img src="hat.png">
-		<img src="glasses.png">
+	<div class="sillyoctopus">
+		<div id="octopus"><img src="octopus.png"></div>
+		<div id="hat"><img src="hat.png"></div>
+		<div id="glasses"><img src="glasses.png"></div>
 	</div>
 </body>
 </html>
