--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -6,6 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/elegant-styles.css" type="text/css">
   <link rel="stylesheet" type="text/css" href=" styles/fixed-contact.css">
+  <link rel="stylesheet" type="text/css" href="practice.css">
 </head>
 <body>
   <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
