updated html with css

--- a/css/positioning/3_3.html
+++ b/css/positioning/3_3.html
@@ -2,23 +2,7 @@
 <html>
 <head>
 	<title>Octopus in Clothes</title>
-<style>
-	.octopus {
-		position: absolute;
-		top: 80px;
-		left: 40px;
-		z-index:-1}
-	.hat {position: absolute;
-		top: 10px;
-		left: 20px;
-		z-index: +1
-	}
-	.glasses {
-		position: absolute;
-		top: 180px;
-		left: 80px;
-	z-index: +0}
-</style>
+<link rel="stylesheet" type="text/css" href="octopus.css">
 </head>
 <body>
 		<div class="octopus" ="octopus"><img src="octopus.png"></div>
