table of goober

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -28,6 +28,27 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
 			</section>
+			<section>
+				<h2>Table of goobly
+				</h2>
+				<table border="1">
+					<tr>
+						<th>fsd</th>
+						<th>xcv</th>
+						<th>reg</th>
+					</tr>
+					<tr>
+						<td>^$#^</td>
+						<td>*#@</td>
+						<td>!#)</td>
+					</tr>
+					<tr>
+						<td>987</td>
+						<td colspan="2">642</td>
+
+					</tr>
+				</table>
+			</section>
 		</article>
 	</main>
 	<aside>
