--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -59,4 +59,16 @@
 </body>
 </html>
 
-Comment
+Reflections
+What is the purpose of HTML5 semantic tags? Which ones do you see as most useful?
+Semantic Tags allow for a readers used by people with disabilites to makes sense of the content but also for fellow web developers gives us clean uniform standards. I find the use of section and article helpful, turns webpages much like a magazine or newspaper.
+
+What is the order the browser uses to display elements on a page?
+The are read up down, so the top elements will be rendered first.
+
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date?
+I found snippets very interesting, one example my Guide used was how they are helpful for his debugging. And with charset they allow the html pages you make to use newest innovations such as emojis. If i learn how to use emoji's I will use my own sublime snippets. If i'm making a website and need each page to be uniform i'll probably use a snippet to preload elements I'm constantly using.
+
+What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?
+I actually find html easy compared to the confusion and difficutly of CSS. My peer compared the html as the skeleton of the website and with validators I can always proove my work.
