--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,3 +1,4 @@
+<!--My partner retained the CSS information much better then I did. But when we both got stuck we would google it out. -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
